# ulanzi-studio-niri

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: config.toml
packaging/: ulanzi-niri.service
src/ulanzi_niri/: __init__.py  cli.py  config.py  icons.py  log.py  pages.py  service.py  stats.py  wide_tile.py  zip_builder.py
src/ulanzi_niri/actions/: __init__.py
src/ulanzi_niri/data/: 70-ulanzi-d200x.rules  __init__.py
src/ulanzi_niri/protocol/: device.py  manager.py  ulanzi_d200x.py
tests/: test_config.py  test_icons.py  test_protocol.py  test_wide_tile.py  test_zip_builder.py
