[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ulanzi-studio-niri"
version = "0.1.0"
description = "Driver and Niri integration for the Ulanzi Stream Controller D200X"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "ulanzi-studio-niri contributors" }]
keywords = ["ulanzi", "d200x", "stream-deck", "niri", "wayland"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: Window Managers",
]
dependencies = [
    "construct~=2.10",
    "pydantic>=2",
    "pillow>=10",
    "psutil>=5.9",
    "watchfiles>=0.21",
    "deepdiff>=7",
]

[project.scripts]
ulanzi-niri = "ulanzi_niri.cli:main"

[project.urls]
Homepage = "https://github.com/doitian/ulanzi-studio-niri"
Issues = "https://github.com/doitian/ulanzi-studio-niri/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.uv]
python-preference = "only-system"

[tool.hatch.build.targets.wheel]
packages = ["src/ulanzi_niri"]

[tool.hatch.build.targets.wheel.force-include]
"src/ulanzi_niri/data" = "ulanzi_niri/data"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
ignore_missing_imports = true
